Add add2app demo.

--- a/ohos_app/entry/src/main/module.json5
+++ b/ohos_app/entry/src/main/module.json5
@@ -19,9 +19,7 @@
     "description": "$string:app_name",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone",
-      "tablet",
-      "2in1"
+      "phone"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
