--- a/ohos_app/oh-package.json5
+++ b/ohos_app/oh-package.json5
@@ -24,5 +24,8 @@
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.6"
+  },
+  "overrides": {
+    "@ohos/flutter_ohos": "file:./flutter_module/har/flutter.har"
   }
 }
