--- a/ohos_app/flutter_module/oh-package.json5
+++ b/ohos_app/flutter_module/oh-package.json5
@@ -7,6 +7,6 @@
   license: 'OpenValley',
   dependencies: {
     '@ohos/flutter_ohos': 'file:./har/flutter.har',
-    '@ohos/flutter_boost': 'file:./har/flutter_boost.har',
+    flutter_boost: 'file:./har/flutter_boost.har',
   },
 }
