--- a/ohos_app/oh-package.json5
+++ b/ohos_app/oh-package.json5
@@ -14,7 +14,7 @@
 */
 
 {
-  "name": "apptemplate",
+  "name": "my_flutter_module",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "",
@@ -26,6 +26,6 @@
     "@ohos/hypium": "1.0.6"
   },
   "overrides": {
-    "@ohos/flutter_ohos": "file:./flutter_module/har/flutter.har"
-  }
+    '@ohos/flutter_ohos': 'file:./har/flutter.har',
+  },
 }
