--- a/ohos_app/AppScope/app.json5
+++ b/ohos_app/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.example.flutter_module",
+    "bundleName": "com.example.my_flutter_module",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
