--- a/ohos_app/entry/oh-package.json5
+++ b/ohos_app/entry/oh-package.json5
@@ -20,8 +20,9 @@
   "main": "",
   "author": "",
   "license": "",
-   "dependencies": {
-      "@ohos/flutter_module": "../flutter_module"
-    }
+  "dependencies": {
+    "@ohos/flutter_module": "../flutter_module",
+    '@ohos/flutter_ohos': 'file:../flutter_module/har/flutter.har',
+  }
 }
 
