--- a/ohos_app/entry/oh-package.json5
+++ b/ohos_app/entry/oh-package.json5
@@ -21,8 +21,9 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "@ohos/flutter_module": "../flutter_module",
-    '@ohos/flutter_ohos': 'file:../flutter_module/har/flutter.har',
+    'flutter_module': '../flutter_module',
+    'flutter_boost': 'file:../har/flutter_boost.har',
+    '@ohos/flutter_ohos': 'file:../har/flutter.har'
   }
 }
 
