--- a/ohos_app/flutter_module/oh-package.json5
+++ b/ohos_app/flutter_module/oh-package.json5
@@ -1,5 +1,5 @@
 {
-  "name": "@ohos/flutter_module",
+  "name": "flutter_module",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "index.ets",
