将`flutter_module`移到子目录:
移动前：
.
├── AppScope
│   └── resources
├── dependencies
├── dta
├── entry
│   └── src
├── hvigor
└── flutter_module

移动后：
.
├── AppScope
│   └── resources
├── dependencies
├── dta
├── entry
│   └── src
├── hvigor
└── modules
    └── flutter_module

See https://gitee.com/openharmony-sig/flutter_flutter/pulls/232 for more details.

--- a/ohos_app/build-profile.json5
+++ b/ohos_app/build-profile.json5
@@ -26,7 +26,7 @@
     },
     {
       "name": "flutter_module",
-      "srcPath": "./flutter_module",
+      "srcPath": "./modules/flutter_module",
       "targets": [
         {
           "name": "default",
