--- a/ohos_app/modules/flutter_module/oh-package.json5
+++ b/ohos_app/modules/flutter_module/oh-package.json5
@@ -6,6 +6,6 @@
   "author": "",
   "license": "OpenValley",
   "dependencies": {
-    "@ohos/flutter_ohos": "file:../har/flutter.har"
+    "@ohos/flutter_ohos": "file:../../har/flutter.har"
   }
 }
