--- a/ohos_app/oh-package.json5
+++ b/ohos_app/oh-package.json5
@@ -1,4 +1,5 @@
 {
+  "modelVersion": "5.0.0",
   "name": "my_flutter_module",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
